www/docs/en/3.2.0/cordova/splashscreen/splashscreen.hide.md
---
license: >
    Licensed to the Apache Software Foundation (ASF) under one
    or more contributor license agreements.  See the NOTICE file
    distributed with this work for additional information
    regarding copyright ownership.  The ASF licenses this file
    to you under the Apache License, Version 2.0 (the
    "License"); you may not use this file except in compliance
    with the License.  You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing,
    software distributed under the License is distributed on an
    "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
    KIND, either express or implied.  See the License for the
    specific language governing permissions and limitations
    under the License.
---

# splashscreen.hide

Dismiss the splash screen.

    navigator.splashscreen.hide();

## Description

This method dismisses the application's splash screen.

## Supported Platforms

- Amazon Fire OS
- Android
- BlackBerry 10
- iOS
- Windows Phone 7 and 8
- Windows 8

## Quick <a href="<a href="splashscreen.show.html">splashscreen.show</a>.html">Example</a>

    navigator.splashscreen.hide();

## Full <a href="<a href="splashscreen.show.html">splashscreen.show</a>.html">Example</a>

    <!DOCTYPE html>
    <html>
      <head>
        <title><a href="splashscreen.html">Splashscreen</a> <a href="<a href="splashscreen.show.html">splashscreen.show</a>.html">Example</a></title>

        <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
        <script type="text/javascript" charset="utf-8">

        // Wait for device API libraries to load
        //
        document.<a href="../inappbrowser/inappbrowser.html">addEventListener</a>("<a href="../events/events.deviceready.html">deviceready</a>", on<a href="../device/device.html">Device</a>Ready, false);

        // device APIs are available
        //
        function on<a href="../device/device.html">Device</a>Ready() {
            navigator.splashscreen.hide();
        }

        </script>
      </head>
      <body>
        <h1><a href="<a href="splashscreen.show.html">splashscreen.show</a>.html">Example</a></h1>
      </body>
    </html>

## iOS Quirk

The `config.xml` file's `AutoHideSplashScreen` setting must be
`false`. To delay hiding the splash screen for two seconds, add a
timer such as the following in the `<a href="../events/events.deviceready.html">deviceready</a>` event handler:

        setTimeout(function() {
            navigator.splashscreen.hide();
        }, 2000);
